# smart-window

./: .gitignore  Jenkinsfile  README.md
ai/: legacy.py  legacymain.py  legacyutil.py  main.py  removehuman.sh  requirements.txt
ai-test/: .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  requirements.txt  utils.py
ai-test/infra/: docker-compose.yml
ai-test/infra/nginx/: Dockerfile  index.html  nginx.conf
ai/box/: main.py
ai/gms/: main.py  requirements.txt
ai/imagemusic/: main.py  readme.md
ai/nightshift/: legacy.py  main.py  model.py
ai/removehuman/: main.py  test.py
ai/removehuman/seg/: .gitignore  main.py
ai/removehuman/union/: main.py  requirements.txt
ai/sunset/: main.py  requirements.txt  test.py
backend/: .gitignore  Dockerfile  build.gradle
backend/backend/: build.gradle
backend/src/main/java/com/lumiscape/smartwindow/: SmartwindowApplication.java
backend/src/main/java/com/lumiscape/smartwindow/alarm/controller/: AlarmController.java
backend/src/main/java/com/lumiscape/smartwindow/alarm/domain/: Alarm.java  DayOfWeekConverter.java
backend/src/main/java/com/lumiscape/smartwindow/alarm/dto/: AlarmCreateRequest.java  AlarmRequestDto.java  AlarmResponse.java  AlarmResponseDto.java  AlarmUpdateRequest.java
backend/src/main/java/com/lumiscape/smartwindow/alarm/repository/: AlarmRepository.java
backend/src/main/java/com/lumiscape/smartwindow/alarm/service/: AlarmService.java
backend/src/main/java/com/lumiscape/smartwindow/auth/controller/: AuthController.java  TokenController.java
backend/src/main/java/com/lumiscape/smartwindow/auth/domain/: RefreshToken.java
backend/src/main/java/com/lumiscape/smartwindow/auth/dto/: TokenReissueRequest.java  TokenResponse.java
backend/src/main/java/com/lumiscape/smartwindow/auth/repository/: RefreshTokenRepository.java
backend/src/main/java/com/lumiscape/smartwindow/auth/service/: AuthService.java
backend/src/main/java/com/lumiscape/smartwindow/config/: RestTemplateConfig.java
backend/src/main/resources/: application.yml  smartwindow-a4e7a-firebase-adminsdk-fbsvc-da2b0ce557.json
backend/src/test/java/com/lumiscape/smartwindow/: SmartwindowApplicationTests.java
box/: main.py
frontend/: App.tsx  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/android/: build.gradle
frontend/android/app/: build.gradle  google-services.json
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/frontend/: MainActivity.kt  MainApplication.kt
frontend/android/app/src/main/res/raw/: splashscreen.riv
frontend/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
frontend/src/api/: alarm.ts  auth.ts  axios.ts  device.ts  media.ts  music.ts  queryClient.ts  token.ts  user.ts
frontend/src/components/: SocialLoginButton.tsx
frontend/src/components/common/: Header.tsx
frontend/src/constants/: color.ts
frontend/src/navigation/: AuthNavigator.tsx  BottomTabNavigator.tsx  CustomTopTabNavigator.tsx  DeviceTopTabNavigator.tsx  DisplayTopTabNavigator.tsx  MainNavigator.tsx  RootNavigator.tsx
frontend/src/screens/: HomeScreen.tsx  MainScreen.tsx
frontend/src/screens/auth/: LoginScreen.tsx  SocialLoginScreen.tsx
frontend/src/screens/custom/: CustomWrapperScreen.tsx
frontend/src/screens/custom/tabs/: AlarmScreen.tsx  CustomScreen.tsx  SensorScreen.tsx  WidgetScreen.tsx
frontend/src/screens/device/: DeviceControlScreen.tsx
frontend/src/screens/device/tabs/: BrightnessScreen.tsx  OpenCloseScreen.tsx  TransparencyScreen.tsx
frontend/src/screens/display/: DisplayScreen.tsx
frontend/src/screens/display/tabs/: ImageUploadScreen.tsx  MusicScreen.tsx  StorageScreen.tsx
frontend/src/screens/home/: HomeScreen.tsx
frontend/src/screens/main/: DeviceRegisterScreen.tsx  MainScreen.tsx
frontend/src/screens/mypage/: MyPageScreen.tsx
frontend/src/screens/splash/: RiveSplashScreen.tsx
frontend/src/services/: fcmService.ts
frontend/src/stores/: authStore.ts  deviceStore.ts
frontend/src/types/: declarations.d.ts  react-native-base64.d.ts
infra/: README.md  docker-compose.dev.yml  docker-compose.yml
infra/mosquitto/: Dockerfile
infra/mosquitto-dev/: Dockerfile
infra/mosquitto-dev/config/: mosquitto.conf
infra/mosquitto/config/: mosquitto.conf  password_file
infra/nginx/: Dockerfile  index.html  nginx.conf
infra/postgres/: 01_init.sql  02_dummy.sql
qt/: CMakeLists.txt  INSTALLATION_GUIDE.md  LINUX_DESKTOP_SETUP_GUIDE.md  RASPBERRY_PI_DEPLOYMENT.md  RASPBERRY_PI_SETUP_GUIDE.md  README.md  main.cpp  myresources.qrc
qt/assets/presets/: auto_scenes.json  config.json  widgets.json
qt/python/: mediapipe_gesture_service.py  requirements.txt  youtube_audio_service.py
qt/qml/: Main.qml
qt/qml/components/: AmbientGlow.qml  GestureControlledUI.qml  GestureCursor.qml  GlassCard.qml  MinimalButton.qml  RadialMenu.qml
qt/qml/screens/: AlarmScreen.qml  AutoModeScreen.qml  CustomModeScreen.qml  GlassModeScreen.qml  LoadingScreen.qml  Main.qml  MenuScreen.qml  PrivacyModeScreen.qml  StandbyScreen.qml
qt/qml/styles/: Effects.qml  Theme.qml
qt/qml/widgets/: ClockWidget.qml  QuoteWidget.qml  SpotifyWebPlayer.qml  SpotifyWidget.qml  WeatherWidget.qml  YouTubeAudioWidget.qml  YouTubePlayer.qml
qt/resources/: lumiscape.qrc
qt/src/: main.cpp
qt/src/core/: AlarmManager.cpp  AlarmManager.h  AppConfig.cpp  AppConfig.h  GestureBridge.cpp  GestureBridge.h  MediaPipeClient.cpp  MediaPipeClient.h  MqttClient.cpp  MqttClient.h  RestClient.cpp  RestClient.h  Router.cpp  Router.h  SensorBus.cpp  SensorBus.h
qt/src/hardware/: GpioControl.cpp  GpioControl.h  PDLCController.cpp  PDLCController.h  WindowController.cpp  WindowController.h
qt/src/integrations/: SpotifyAuthHelper.cpp  SpotifyAuthHelper.h
qt/src/widgets/: ClockProvider.cpp  ClockProvider.h  SensorManager.cpp  SensorManager.h  SpotifyProvider.cpp  SpotifyProvider.h  WeatherProvider.cpp  WeatherProvider.h  WidgetRegistry.cpp  WidgetRegistry.h  YouTubeProvider.cpp  YouTubeProvider.h
(+98 files in other folders)
